--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,21 +1,18 @@
 @import '~vuetify/src/components/VCard/_variables.scss';
-@import '~vuetify/src/components/VSheet/_variables.scss';
 @import '~vuetify/src/components/VAlert/variables.scss';
 @import '~vuetify/src/styles/styles.sass';
 
-$card-border-radius: 6px;
-$card-shaped-border-radius: 22px;
+$card-shaped-border-radius: 22px !important;
 
 $alert-border-radius: 8px;
 $sheet-border-radius: 6px;
 
-// theme to override, same applies for $material-light
 $material-dark: map-merge(
   $material-dark,
   (
-    'background': "#192330",
+    'background': #243340,
     'text': (
-      'primary': map-get($grey, 'lighten-2')
+      'primary': #afc0d5,
     )
   )
-);
+) !important;
